--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   },
   "homepage": "https://github.com/Ispaluan84/ProjectBackend#readme",
   "dependencies": {
+    "cloudinary": "^2.7.0",
     "dotenv": "17.0.1",
     "express": "5.1.0",
     "method-override": "3.0.0",
     "mongodb": "^6.17.0",
-    "mongoose": "8.16.1"
+    "mongoose": "8.16.1",
+    "multer": "^2.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
